Updated how comments get created and updated openApi
